TEST_PROGRAMS/VALID/justin_domignue/valid-1.min
# A test program in MiniLang

# declarations first

var x: int;
var y: float; # y is a float
var z: string;

# statements now

z = "a string 123 !.?";
x = 10;
y = 1.000;

while x do
  y = y * 2.0;
  x = x - 1;
done

if x then
  y = y + 1;
else
  if y then
    x = x / 2;
  endif
endif

print y;
read x;

