TEST_PROGRAMS/INVALID/Fan_Jin/initialization.min
var x: int;
var y: string;
var z: string = "hello";

y = 0;
x = y + 3;

if x then
  print z;
else
  print "not " + z;
endif
